cot-macros/tests/ui/derive_api_operation_response_enum.rs
use cot_macros::ApiOperationResponse;

#[derive(ApiOperationResponse)]
struct NotEnum;

fn main() {}
